// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-dnQTCN hVPoxN"
>
  <div
    className="sc-fCdBJp jWoblw"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-dnQTCN hVPoxN"
>
  <div
    className="sc-fCdBJp jWoblw"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp fMSZAQ"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp eQvBNg"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp hYIIzU"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-dnQTCN hVPoxN"
>
  <div
    className="sc-fCdBJp hMZuGZ"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp iSRCFh"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp ccsBSZ"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp jWoblw"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-fCdBJp iwPhys"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
